# chress

./: Cargo.toml  LICENSE  OPTIMISATIONS.md  README.md
chress/: Cargo.toml
chress-cli/: Cargo.toml  LICENSE.txt  README.md
chress-cli/src/: lib.rs  main.rs  perft.rs  uci.rs
chress-engine/: Cargo.toml
chress-engine/src/: lib.rs  main.rs
chress-engine/src/evaluation/: mod.rs
chress-engine/src/search/: mod.rs  searcher.rs
chress-engine/src/static/: mod.rs
chress-test/: Cargo.toml
chress-test/src/: lib.rs
chress/src/: bitboard.rs  board.rs  flags.rs  lib.rs  move.rs  move_gen.rs  piece.rs
chress/src/benches/: board.rs
chress/src/board/: bitboard.rs  color.rs  flags.rs  mod.rs  move.rs  piece.rs  sliding_moves.rs  square.rs
chress/src/debug/: mod.rs
chress/src/move_gen/: mod.rs
chress/tests/: bitboard.rs  board.rs  flags.rs  perft.rs  piece.rs
